[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aocar"
version = "0.1.0"
description = "AOCAR package"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]